--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    background-color: #f5f5f5;
+}
+
 .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,4 +21,40 @@
 
 .logo {
     margin-right: 10px;
+}
+
+.reflect-section {
+    background-color: rgb(208, 208, 208);
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.reflect-title {
+    display: flex;
+    justify-content: center;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.refLabel {
+    display: flex;
+    justify-content: center;
+}
+  
+.refInput {
+    display: block;
+    margin-bottom: 10px;
+}
+  
+.reflect-button {
+    display: flex;
+    margin-top: 10px;
+    background-color: aquamarine;
+    justify-content: center;
 }
