--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     background-color: rgb(208, 208, 208);
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 30px;
     margin-top: 20px;
 }
 
@@ -57,4 +57,37 @@ body {
     margin-top: 10px;
     background-color: aquamarine;
     justify-content: center;
+}
+
+.balance-section {
+    background-color: rgb(208, 208, 208);
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    margin-top: 20px;
+}
+
+.input-group-balance {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.balance-title {
+    display: flex;
+    justify-content: center;
+}
+
+.incLabel {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.income-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    background-color: aquamarine;
 }
