--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,28 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    background-color: rgb(179, 179, 179);
+    background-color: rgb(255, 255, 255);
+    text-align:left;
+}
+
+.input {
+    display: flex;
+    width:auto;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.Main {
+    display: flex;
+    padding: 50px;
 }
 
 .container {
-    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0 auto;
+    margin-right: 15px;
     padding: 0 15px;
 }
 
@@ -14,7 +30,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 25px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.196);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .logo {
@@ -24,21 +42,48 @@ body {
 h1, h2, h3 {
     text-align: center;
     color: black;
-    margin-bottom: 25px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
-.reflection-section, .balance-section, .input-section, .expenses-list {
-    background-color: rgb(208, 208, 208);
+.reflection-section, .balance-section, .input-section, .expenses-list, .totalbal{
+    background-color: rgb(255, 253, 253);
     border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.196);
     padding: 20px;
     margin-bottom: 20px;
+}
+
+.reflect-label, .income-label {
+    text-align: center;
+}
+
+.totalbal{
+    background-color: aquamarine;
+}
+
+.reflection-section {
+    margin-right: 20px;
+}
+
+.balance-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.expenses-list {
+    width: 800px;
+}
+
+.input-section {
+    width: 430px;
 }
 
 .input-group {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .input-group label {
@@ -101,6 +146,11 @@ th, td {
 th {
     background-color: aquamarine;
     color: black;
+    text-align: center;
+}
+
+.date{
+    width: 120px;
 }
 
 tfoot td {
@@ -116,12 +166,34 @@ tfoot td {
     cursor: pointer;
 }
 
-.balance-section {
+.reflection-section, .balance-section {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
-.reflection-section {
-    margin-bottom: 20px;
+.bal{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+}
+
+.unit, #total-balance {
+    margin-left: 5px;
+    font-size: 30px;
+}
+
+.balances{
+    display: flex;
+}
+
+@media only screen and (max-width: 400px) {
+    .header{
+        width: 100vw;
+   }
+    .Main{
+        margin-top: 30px;
+        padding: 5px;
+   }
 }
