Added the browser storage, and the deleted expense value will be added back to the total balance

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ body {
 }
 
 .header {
+    background-color: aquamarine;
     display: flex;
     justify-content: center;
     align-items: center;
