--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,17 @@ body {
     margin-right: 10px;
 }
 
-h1, h2, h3 {
+.downloadButton, .importButton {
+    display: flex;
+    justify-content: center;
+}
+
+.dLtext, .importext {
+    margin-top: 4px;
+    margin-left: 6px;
+}
+
+h1, h2, h3, h5 {
     text-align: center;
     color: black;
     margin-top: 0px;
