--- a/src/styles.css
+++ b/src/styles.css
@@ -40,12 +40,12 @@ body {
     margin-right: 10px;
 }
 
-.downloadButton, .importButton {
+.downloadButton {
     display: flex;
     justify-content: center;
 }
 
-.dLtext, .importext {
+.dLtext {
     margin-top: 4px;
     margin-left: 6px;
 }
@@ -89,6 +89,13 @@ h1, h2, h3, h5 {
 .input-section {
     width: 430px;
 }
+
+.reflectBtn:hover {background-color: rgb(0, 255, 170);}
+.addIncomeBtn:hover {background-color: rgb(0, 255, 170);}
+.addCategoryBtn:hover {background-color: rgb(0, 255, 170);}
+.addButton:hover {background-color: rgb(0, 255, 170);}
+.sortButton:hover {background-color: rgb(0, 255, 170);}
+.downloadButton:hover {background-color: rgb(0, 255, 170);}
 
 .input-group {
     display: flex;
@@ -204,13 +211,50 @@ tfoot td {
     display: flex;
 }
 
+.fileInput {
+    display: flex;
+    justify-content: center;
+    margin-left: 80px;
+    margin-bottom: 5px;
+}
 
-@media only screen and (max-width: 400px) {
-    .header{
-        width: 100vw;
-   }
-    .Main{
-        margin-top: 30px;
-        padding: 5px;
-   }
+@media only screen and (max-width: 600px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .logo {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    
+    .Main {
+        padding: 10px;
+    }
+    
+    .container {
+        margin-right: 0;
+        padding: 0;
+    }
+    
+    .input-section {
+        width: 100%;
+    }
+    
+    .expenses-list {
+        width: 100%;
+    }
+    
+    .reflect-label,
+    .income-label {
+        text-align: center;
+        margin-bottom: 5px;
+    }
+    
+    .input-group select,
+    .input-group input[type="number"],
+    .input-group input[type="date"] {
+        font-size: 12px;
+    }
 }
