Added a header for the add expense section

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,11 @@ body {
     text-align:left;
 }
 
+.categorySelectClass {
+    display: flex;
+    margin-top: 25px;
+}
+
 .input {
     display: flex;
     width:auto;
