--- a/src/styles.css
+++ b/src/styles.css
@@ -223,7 +223,7 @@ tfoot td {
     margin-bottom: 5px;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen {
     body {
         display: flex;
         flex-direction: column;
@@ -234,27 +234,41 @@ tfoot td {
     .totalbal {
         display: flex;
         align-items: center;
+        width: 100%;
     }
 
     .reflection-section {
         display: flex;
         align-items: center;
+        justify-content: center;
+        width: 100%
     }
 
     .balance-section {
         display: flex;
         align-items: center;   
+        justify-content: center;
+        width: 100%;
     }
 
     .header {
-        flex-direction: column;
-        align-items: center;
+        /* align-items: center;
         padding: 10px;
         width: 100%;
+        background-color: white; */
+        background-color: aquamarine;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.196);
+        padding-top: 15px;
+        padding-bottom: 15px;
+        width: 120%;
     }
 
     .logo {
         margin-right: 0;
+        margin-top: 10px;
         margin-bottom: 10px;
     }
 
@@ -315,5 +329,9 @@ tfoot td {
 
     .balances {
         flex-direction: column;
+    }
+
+    .downloadButton {
+        width: 120%
     }
 }
