--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
+:root {
+    --primary-color: #a6c0d6; /* 60% */
+    --secondary-color: rgba(166, 192, 214, 0.491); /* 30% */
+    --accent-color: #dceeff; /* 10% */
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    background-color: rgb(255, 255, 255);
-    text-align:left;
+    text-align: left;
+    background-color: var(--accent-color);
 }
 
 .categorySelectClass {
@@ -12,7 +18,7 @@ body {
 
 .input {
     display: flex;
-    width:auto;
+    width: auto;
     justify-content: center;
     flex-direction: column;
 }
@@ -32,11 +38,11 @@ body {
 }
 
 .header {
-    background-color: #28cff54f;
+    background-color: var(--accent-color);
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.196);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -58,16 +64,16 @@ body {
 h1, h2, h3, h5 {
     text-align: center;
     color: black;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.reflection-section, .balance-section, .input-section, .expenses-list, .totalbal{
-    /* background-color: #28cff54f; */
+.reflection-section, .balance-section, .input-section, .expenses-list, .totalbal {
     border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.196);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
+    background-color: white;
 }
 
 .reflect-label, .income-label {
@@ -75,7 +81,8 @@ h1, h2, h3, h5 {
 }
 
 .totalbal {
-    background-color: #28cff54f; 
+    background-color: #c2dcf3;
+    backdrop-filter: blur(50px);
 }
 
 .reflection-section {
@@ -85,6 +92,7 @@ h1, h2, h3, h5 {
 .balance-section {
     display: flex;
     flex-direction: column;
+    
 }
 
 .expenses-list {
@@ -92,15 +100,17 @@ h1, h2, h3, h5 {
 }
 
 .input-section {
-    width: 430px;
+    width: 455px;
 }
 
-.reflectBtn:hover {background-color: rgb(0, 255, 170);}
-.addIncomeBtn:hover {background-color: rgb(0, 255, 170);}
-.addCategoryBtn:hover {background-color: rgb(0, 255, 170);}
-.addButton:hover {background-color: rgb(0, 255, 170);}
-.sortButton:hover {background-color: rgb(0, 255, 170);}
-.downloadButton:hover {background-color: rgb(0, 255, 170);}
+.reflectBtn:hover,
+.addIncomeBtn:hover,
+.addCategoryBtn:hover,
+.addButton:hover,
+.sortButton:hover,
+.downloadButton:hover {
+    background-color: var(--secondary-color);
+}
 
 .input-group {
     display: flex;
@@ -115,7 +125,9 @@ h1, h2, h3, h5 {
     color: #333;
 }
 
-.input-group select, .input-group input[type="number"], .input-group input[type="date"] {
+.input-group select,
+.input-group input[type="number"],
+.input-group input[type="date"] {
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -124,16 +136,17 @@ h1, h2, h3, h5 {
     font-size: 14px;
 }
 
-button, .startTracking {
-    width: 100%; /* Set the width to 100% */
+button,
+.startTracking {
+    width: 100%;
     padding: 10px 15px;
-    background-color: #28cff54f;
     color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px;
     font-size: 14px;
+    background-color: var(--primary-color);
 }
 
 .sortButton {
@@ -172,12 +185,12 @@ th, td {
 }
 
 th {
-    background-color: #28cff54f;
+    background-color: var(--accent-color);
     color: black;
     text-align: center;
 }
 
-.date{
+.date {
     width: 120px;
 }
 
@@ -194,25 +207,27 @@ tfoot td {
     cursor: pointer;
 }
 
-.reflection-section, .balance-section {
+.reflection-section,
+.balance-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-bottom: 20px;
 }
 
-.bal{
+.bal {
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content: center;
 }
 
-.unit, #total-balance {
+.unit,
+#total-balance {
     margin-left: 5px;
     font-size: 30px;
 }
 
-.balances{
+.balances {
     display: flex;
 }
 
@@ -252,15 +267,11 @@ tfoot td {
     }
 
     .header {
-        /* align-items: center;
-        padding: 10px;
-        width: 100%;
-        background-color: white; */
-        background-color: #28cff54f;
+        background-color: var(--accent-color);
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.196);
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
         padding-top: 15px;
         padding-bottom: 15px;
         width: 120%;
