--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ h1, h2, h3, h5 {
 }
 
 .totalbal {
-    background-color: #c2dcf3;
+    background-color: #ffffff;
     backdrop-filter: blur(50px);
 }
 
@@ -92,7 +92,6 @@ h1, h2, h3, h5 {
 .balance-section {
     display: flex;
     flex-direction: column;
-    
 }
 
 .expenses-list {
@@ -250,6 +249,7 @@ tfoot td {
         display: flex;
         align-items: center;
         width: 100%;
+        background: white;
     }
 
     .reflection-section {
