--- a/src/styles.css
+++ b/src/styles.css
@@ -199,7 +199,7 @@ tfoot td {
 
 .delete-btn {
     padding: 5px 10px;
-    background-color: red;
+    background-color: rgb(189, 81, 195);
     color: white;
     border: none;
     border-radius: 4px;
